--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "body-parser": "*",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
-    "ejs": "^2.5.7",
-    "express": "*",
-    "express-validator": "^4.2.1",
-    "mongojs": "^2.4.1"
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-validator": "^4.3.0",
+    "mongojs": "^2.6.0"
   },
   "author": "Daniel Ajilore",
   "license": "ISC"
